Feature: Adicionado a route da US038 no swagger
